Improved the menu layout

--- a/about-the-author.html
+++ b/about-the-author.html
@@ -11,54 +11,97 @@
   <title>About the Author</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?40978171"/>
-  <link rel="stylesheet" type="text/css" href="css/about-the-author.css?4164988968" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4272759779"/>
+  <link rel="stylesheet" type="text/css" href="css/about-the-author.css?4254280159" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
+var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
+  <script type="text/javascript">
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/double-pica-small-caps:n4:all.js" type="text/javascript">\x3C/script>');
+</script>
   <!--[if lt IE 9]>
   <script src="scripts/html5shiv.js?4241844378" type="text/javascript"></script>
   <![endif]-->
    </head>
  <body>
 
-  <div class="clearfix" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="ppu361-3"><!-- column -->
-    <div class="clearfix colelem" id="pu361-3"><!-- group -->
-     <div class="clearfix grpelem" id="u361-3"><!-- content -->
-      <p>&nbsp;</p>
+  <div class="clearfix" id="page"><!-- column -->
+   <div class="clearfix colelem" id="ppu459"><!-- group -->
+    <div class="clearfix grpelem" id="pu459"><!-- group -->
+     <div class="clearfix grpelem" id="u459"><!-- group -->
+      <div class="clip_frame grpelem" id="u460"><!-- image -->
+       <img class="block" id="u460_img" src="images/goodreads_icon_30x30.png" alt="" width="30" height="30"/>
+      </div>
      </div>
-     <nav class="MenuBar clearfix grpelem" id="menuu240"><!-- horizontal box -->
-      <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u253-4"><!-- content --><p>Home</p></div></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u245-4"><!-- content --><p>The Shade Trilogy</p></div><div class="grpelem" id="u247"><!-- image --></div></a>
-       <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
-        <ul class="SubMenuView clearfix colelem" id="u243"><!-- vertical box -->
-         <li class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u335-4"><!-- content --><p>The Shade</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u347-4"><!-- content --><p>The Corrupt</p></div></a></li>
-         <li class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u356-4"><!-- content --><p>The Forgotten</p></div></a></li>
-        </ul>
-       </div>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u313"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u314" href="short-stories.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u316-4"><!-- content --><p>Short Stories</p></div></a>
-      </div>
-      <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
-       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap clearfix grpelem" id="u278-4"><!-- content --><p>About the Author</p></div></a>
-      </div>
-     </nav>
+     <div class="clearfix grpelem" id="u466-4"><!-- content -->
+      <p>GOODREADS</p>
+     </div>
+     <a class="nonblock nontext grpelem" id="u480" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- simple frame --></a>
     </div>
-    <div class="clip_frame colelem" id="u426"><!-- image -->
-     <img class="block" id="u426_img" src="images/mtallman.jpg" alt="" width="200" height="266"/>
+    <div class="clearfix grpelem" id="u449"><!-- group -->
+     <div class="clip_frame grpelem" id="u440"><!-- image -->
+      <img class="block" id="u440_img" src="images/fb-f-logo__blue_29.png" alt="" width="29" height="29"/>
+     </div>
     </div>
+    <div class="clearfix grpelem" id="u450-4"><!-- content -->
+     <p>FACEBOOK</p>
+    </div>
+    <a class="nonblock nontext grpelem" id="u479" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- simple frame --></a>
+   </div>
+   <nav class="MenuBar rounded-corners shadow colelem" id="menuu240"><!-- horizontal box -->
+    <div class="_menuu240 f3s_top" id="_menuu240-f3s_top"></div>
+    <div class="_menuu240 f3s_mid clearfix" id="_menuu240-f3s_mid">
+     <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u253" alt="Home" src="images/blank.gif"/><!-- state-based BG images --></a>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u245" alt="The Shade Trilogy" src="images/blank.gif"/><!-- state-based BG images --></a>
+      <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
+       <ul class="SubMenuView colelem" id="u243"><!-- vertical box -->
+        <div class="_u243 f3s_top" id="_u243-f3s_top"></div>
+        <div class="_u243 f3s_mid clearfix" id="_u243-f3s_mid">
+         <div class="position_content" id="u243_position_content">
+          <div class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box -->
+           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a>
+          </div>
+          <div class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box -->
+           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a>
+          </div>
+          <div class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box -->
+           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a>
+          </div>
+         </div>
+        </div>
+        <div class="_u243 f3s_bot" id="_u243-f3s_bot"></div>
+       </ul>
+      </div>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u313"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u314" href="short-stories.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u316" alt="Short Stories" src="images/blank.gif"/><!-- state-based BG images --></a>
+     </div>
+     <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
+      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u278" alt="About the Author" src="images/blank.gif"/><!-- state-based BG images --></a>
+     </div>
+    </div>
+    <div class="_menuu240 f3s_bot" id="_menuu240-f3s_bot"></div>
+   </nav>
+   <div class="clip_frame colelem" id="u426"><!-- image -->
+    <img class="block" id="u426_img" src="images/mtallman.jpg" alt="" width="200" height="266"/>
    </div>
    <div class="verticalspacer"></div>
-   <a class="nonblock nontext clip_frame grpelem" id="u420" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- image --><img class="block" id="u420_img" src="images/facebook.jpg" alt="" width="23" height="23"/></a>
-   <a class="nonblock nontext clip_frame grpelem" id="u432" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- image --><img class="block" id="u432_img" src="images/goodreads.jpg" alt="" width="23" height="23"/></a>
+  </div>
+  <div class="preload_images">
+   <img class="preload" src="images/u253-r.png" alt=""/>
+   <img class="preload" src="images/u253-a.png" alt=""/>
+   <img class="preload" src="images/u245-r.png" alt=""/>
+   <img class="preload" src="images/u245-a.png" alt=""/>
+   <img class="preload" src="images/u316-r.png" alt=""/>
+   <img class="preload" src="images/u316-a.png" alt=""/>
+   <img class="preload" src="images/u278-r.png" alt=""/>
+   <img class="preload" src="images/u278-a.png" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
