Updated A-Master, added Facebook feed
+ Updated the look of the A-Master, site looks a lot better now
+ Added a temporary footer.
+ Added a Live Facebook feed. Needs testing, though. If he ever posts
anything again.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4272759779"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?3834801919" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4220362953"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?100461681" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -45,15 +45,17 @@ var __adobewebfontsappname__ = "muse";
      <div class="clip_frame grpelem" id="u440"><!-- image -->
       <img class="block" id="u440_img" src="images/fb-f-logo__blue_29.png" alt="" width="29" height="29"/>
      </div>
-    </div>
-    <div class="clearfix grpelem" id="u450-4"><!-- content -->
-     <p>FACEBOOK</p>
+     <div class="clearfix grpelem" id="u450-4"><!-- content -->
+      <p>FACEBOOK</p>
+     </div>
     </div>
     <a class="nonblock nontext grpelem" id="u479" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- simple frame --></a>
    </div>
-   <nav class="MenuBar rounded-corners shadow colelem" id="menuu240"><!-- horizontal box -->
-    <div class="_menuu240 f3s_top" id="_menuu240-f3s_top"></div>
-    <div class="_menuu240 f3s_mid clearfix" id="_menuu240-f3s_mid">
+   <div class="rgba-background rounded-corners clearfix colelem" id="u481"><!-- group -->
+    <div class="clip_frame grpelem" id="u482"><!-- image -->
+     <img class="block" id="u482_img" src="images/icon.png" alt="" width="101" height="101"/>
+    </div>
+    <nav class="MenuBar clearfix grpelem" id="menuu240"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u253" alt="Home" src="images/blank.gif"/><!-- state-based BG images --></a>
      </div>
@@ -85,10 +87,10 @@ var __adobewebfontsappname__ = "muse";
      <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u278" alt="About the Author" src="images/blank.gif"/><!-- state-based BG images --></a>
      </div>
-    </div>
-    <div class="_menuu240 f3s_bot" id="_menuu240-f3s_bot"></div>
-   </nav>
+    </nav>
+   </div>
    <div class="verticalspacer"></div>
+   <div class="rgba-background rounded-corners colelem" id="u488"><!-- simple frame --></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u253-r.png" alt=""/>
