--- a/the-shade.html
+++ b/the-shade.html
@@ -11,8 +11,8 @@
   <title>The Shade</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4272759779"/>
-  <link rel="stylesheet" type="text/css" href="css/the-shade.css?4212548787" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4220362953"/>
+  <link rel="stylesheet" type="text/css" href="css/the-shade.css?82811342" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -45,15 +45,17 @@ var __adobewebfontsappname__ = "muse";
      <div class="clip_frame grpelem" id="u440"><!-- image -->
       <img class="block" id="u440_img" src="images/fb-f-logo__blue_29.png" alt="" width="29" height="29"/>
      </div>
-    </div>
-    <div class="clearfix grpelem" id="u450-4"><!-- content -->
-     <p>FACEBOOK</p>
+     <div class="clearfix grpelem" id="u450-4"><!-- content -->
+      <p>FACEBOOK</p>
+     </div>
     </div>
     <a class="nonblock nontext grpelem" id="u479" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- simple frame --></a>
    </div>
-   <nav class="MenuBar rounded-corners shadow colelem" id="menuu240"><!-- horizontal box -->
-    <div class="_menuu240 f3s_top" id="_menuu240-f3s_top"></div>
-    <div class="_menuu240 f3s_mid clearfix" id="_menuu240-f3s_mid">
+   <div class="clearfix colelem" id="u481"><!-- group -->
+    <div class="clip_frame grpelem" id="u482"><!-- image -->
+     <img class="block" id="u482_img" src="images/icon.png" alt="" width="101" height="101"/>
+    </div>
+    <nav class="MenuBar clearfix grpelem" id="menuu240"><!-- horizontal box -->
      <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u253" alt="Home" src="images/blank.gif"/><!-- state-based BG images --></a>
      </div>
@@ -85,15 +87,14 @@ var __adobewebfontsappname__ = "muse";
      <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u278" alt="About the Author" src="images/blank.gif"/><!-- state-based BG images --></a>
      </div>
-    </div>
-    <div class="_menuu240 f3s_bot" id="_menuu240-f3s_bot"></div>
-   </nav>
-   <div class="clearfix colelem" id="pu326"><!-- group -->
+    </nav>
+   </div>
+   <div class="rgba-background clearfix colelem" id="u494"><!-- group -->
     <div class="shadow clip_frame grpelem" id="u326"><!-- image -->
      <img class="block" id="u326_img" src="images/the_shade.jpg" alt="" width="313" height="500"/>
     </div>
-    <div class="clearfix grpelem" id="u359-4"><!-- content -->
-     <p id="u359-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
+    <div class="rgba-background clearfix grpelem" id="u495-4"><!-- content -->
+     <p id="u495-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
     </div>
    </div>
    <div class="clearfix colelem" id="u438-5"><!-- content -->
@@ -101,6 +102,7 @@ var __adobewebfontsappname__ = "muse";
     <p>Find the book on Amazon!</p>
    </div>
    <div class="verticalspacer"></div>
+   <div class="colelem" id="u488"><!-- simple frame --></div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u253-r.png" alt=""/>
