--- a/the-shade-trilogy.html
+++ b/the-shade-trilogy.html
@@ -11,8 +11,8 @@
   <title>The Shade Trilogy</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4272759779"/>
-  <link rel="stylesheet" type="text/css" href="css/the-shade-trilogy.css?3834801919" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4220362953"/>
+  <link rel="stylesheet" type="text/css" href="css/the-shade-trilogy.css?357336736" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -29,66 +29,86 @@ var __adobewebfontsappname__ = "muse";
  <body>
 
   <div class="clearfix" id="page"><!-- column -->
-   <div class="clearfix colelem" id="ppu459"><!-- group -->
-    <div class="clearfix grpelem" id="pu459"><!-- group -->
-     <div class="clearfix grpelem" id="u459"><!-- group -->
-      <div class="clip_frame grpelem" id="u460"><!-- image -->
-       <img class="block" id="u460_img" src="images/goodreads_icon_30x30.png" alt="" width="30" height="30"/>
+   <div class="position_content" id="page_position_content">
+    <div class="clearfix colelem" id="ppu459"><!-- group -->
+     <div class="clearfix grpelem" id="pu459"><!-- group -->
+      <div class="clearfix grpelem" id="u459"><!-- group -->
+       <div class="clip_frame grpelem" id="u460"><!-- image -->
+        <img class="block" id="u460_img" src="images/goodreads_icon_30x30.png" alt="" width="30" height="30"/>
+       </div>
+      </div>
+      <div class="clearfix grpelem" id="u466-4"><!-- content -->
+       <p>GOODREADS</p>
+      </div>
+      <a class="nonblock nontext grpelem" id="u480" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- simple frame --></a>
+     </div>
+     <div class="clearfix grpelem" id="u449"><!-- group -->
+      <div class="clip_frame grpelem" id="u440"><!-- image -->
+       <img class="block" id="u440_img" src="images/fb-f-logo__blue_29.png" alt="" width="29" height="29"/>
+      </div>
+      <div class="clearfix grpelem" id="u450-4"><!-- content -->
+       <p>FACEBOOK</p>
       </div>
      </div>
-     <div class="clearfix grpelem" id="u466-4"><!-- content -->
-      <p>GOODREADS</p>
-     </div>
-     <a class="nonblock nontext grpelem" id="u480" href="https://www.goodreads.com/author/show/7847803.Matthew_Tallman"><!-- simple frame --></a>
+     <a class="nonblock nontext grpelem" id="u479" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- simple frame --></a>
     </div>
-    <div class="clearfix grpelem" id="u449"><!-- group -->
-     <div class="clip_frame grpelem" id="u440"><!-- image -->
-      <img class="block" id="u440_img" src="images/fb-f-logo__blue_29.png" alt="" width="29" height="29"/>
+    <div class="clearfix colelem" id="u481"><!-- group -->
+     <div class="clip_frame grpelem" id="u482"><!-- image -->
+      <img class="block" id="u482_img" src="images/icon.png" alt="" width="101" height="101"/>
      </div>
-    </div>
-    <div class="clearfix grpelem" id="u450-4"><!-- content -->
-     <p>FACEBOOK</p>
-    </div>
-    <a class="nonblock nontext grpelem" id="u479" href="https://www.facebook.com/TheShadeBook?pnref=lhc"><!-- simple frame --></a>
-   </div>
-   <nav class="MenuBar rounded-corners shadow colelem" id="menuu240"><!-- horizontal box -->
-    <div class="_menuu240 f3s_top" id="_menuu240-f3s_top"></div>
-    <div class="_menuu240 f3s_mid clearfix" id="_menuu240-f3s_mid">
-     <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u253" alt="Home" src="images/blank.gif"/><!-- state-based BG images --></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u245" alt="The Shade Trilogy" src="images/blank.gif"/><!-- state-based BG images --></a>
-      <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
-       <ul class="SubMenuView colelem" id="u243"><!-- vertical box -->
-        <div class="_u243 f3s_top" id="_u243-f3s_top"></div>
-        <div class="_u243 f3s_mid clearfix" id="_u243-f3s_mid">
-         <div class="position_content" id="u243_position_content">
-          <div class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a>
-          </div>
-          <div class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a>
-          </div>
-          <div class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a>
+     <nav class="MenuBar clearfix grpelem" id="menuu240"><!-- horizontal box -->
+      <div class="MenuItemContainer clearfix grpelem" id="u248"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u251" href="index.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u253" alt="Home" src="images/blank.gif"/><!-- state-based BG images --></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u245" alt="The Shade Trilogy" src="images/blank.gif"/><!-- state-based BG images --></a>
+       <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
+        <ul class="SubMenuView colelem" id="u243"><!-- vertical box -->
+         <div class="_u243 f3s_top" id="_u243-f3s_top"></div>
+         <div class="_u243 f3s_mid clearfix" id="_u243-f3s_mid">
+          <div class="position_content" id="u243_position_content">
+           <div class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a>
+           </div>
+           <div class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a>
+           </div>
+           <div class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box -->
+            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a>
+           </div>
           </div>
          </div>
-        </div>
-        <div class="_u243 f3s_bot" id="_u243-f3s_bot"></div>
-       </ul>
+         <div class="_u243 f3s_bot" id="_u243-f3s_bot"></div>
+        </ul>
+       </div>
       </div>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u313"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u314" href="short-stories.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u316" alt="Short Stories" src="images/blank.gif"/><!-- state-based BG images --></a>
-     </div>
-     <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
-      <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u278" alt="About the Author" src="images/blank.gif"/><!-- state-based BG images --></a>
-     </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u313"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u314" href="short-stories.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u316" alt="Short Stories" src="images/blank.gif"/><!-- state-based BG images --></a>
+      </div>
+      <div class="MenuItemContainer clearfix grpelem" id="u275"><!-- vertical box -->
+       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u276" href="about-the-author.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u278" alt="About the Author" src="images/blank.gif"/><!-- state-based BG images --></a>
+      </div>
+     </nav>
     </div>
-    <div class="_menuu240 f3s_bot" id="_menuu240-f3s_bot"></div>
-   </nav>
-   <div class="verticalspacer"></div>
+    <div class="rgba-background clearfix colelem" id="u500"><!-- group -->
+     <div class="grpelem" id="u503"><!-- custom html -->
+      <div class="fb-page" data-href="https://www.facebook.com/TheShadeBook?fref=nf" data-width="500" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/TheShadeBook?fref=nf"><a href="https://www.facebook.com/TheShadeBook?fref=nf">The Shade Trilogy</a></blockquote></div></div>
+</div>
+    </div>
+    <div class="verticalspacer"></div>
+    <div class="colelem" id="u488"><!-- simple frame --></div>
+    <div class="colelem" id="u496"><!-- custom html -->
+     <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+</div>
+   </div>
   </div>
   <div class="preload_images">
    <img class="preload" src="images/u253-r.png" alt=""/>
