--- a/the-shade-trilogy.html
+++ b/the-shade-trilogy.html
@@ -11,8 +11,8 @@
   <title>The Shade Trilogy</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4220362953"/>
-  <link rel="stylesheet" type="text/css" href="css/the-shade-trilogy.css?357336736" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3948746906"/>
+  <link rel="stylesheet" type="text/css" href="css/the-shade-trilogy.css?3906722582" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -63,22 +63,10 @@ var __adobewebfontsappname__ = "muse";
       <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
        <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u245" alt="The Shade Trilogy" src="images/blank.gif"/><!-- state-based BG images --></a>
        <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
-        <ul class="SubMenuView colelem" id="u243"><!-- vertical box -->
-         <div class="_u243 f3s_top" id="_u243-f3s_top"></div>
-         <div class="_u243 f3s_mid clearfix" id="_u243-f3s_mid">
-          <div class="position_content" id="u243_position_content">
-           <div class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a>
-           </div>
-           <div class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a>
-           </div>
-           <div class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box -->
-            <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a>
-           </div>
-          </div>
-         </div>
-         <div class="_u243 f3s_bot" id="_u243-f3s_bot"></div>
+        <ul class="SubMenuView clearfix colelem" id="u243"><!-- vertical box -->
+         <li class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a></li>
+         <li class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a></li>
         </ul>
        </div>
       </div>
@@ -90,8 +78,11 @@ var __adobewebfontsappname__ = "muse";
       </div>
      </nav>
     </div>
-    <div class="rgba-background clearfix colelem" id="u500"><!-- group -->
-     <div class="grpelem" id="u503"><!-- custom html -->
+    <div class="rgba-background clearfix colelem" id="u500"><!-- column -->
+     <div class="clearfix colelem" id="u505-4"><!-- content -->
+      <p>The Shade Trilogy on Facebook</p>
+     </div>
+     <div class="colelem" id="u503"><!-- custom html -->
       <div class="fb-page" data-href="https://www.facebook.com/TheShadeBook?fref=nf" data-width="500" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/TheShadeBook?fref=nf"><a href="https://www.facebook.com/TheShadeBook?fref=nf">The Shade Trilogy</a></blockquote></div></div>
 </div>
     </div>
