--- a/the-shade.html
+++ b/the-shade.html
@@ -11,8 +11,8 @@
   <title>The Shade</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?426517801"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?4220362953"/>
-  <link rel="stylesheet" type="text/css" href="css/the-shade.css?82811342" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3948746906"/>
+  <link rel="stylesheet" type="text/css" href="css/the-shade.css?3931910125" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className += ' js';
@@ -62,22 +62,10 @@ var __adobewebfontsappname__ = "muse";
      <div class="MenuItemContainer clearfix grpelem" id="u241"><!-- vertical box -->
       <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u244" href="the-shade-trilogy.html"><!-- horizontal box --><img class="MenuItemLabel NoWrap grpelem" id="u245" alt="The Shade Trilogy" src="images/blank.gif"/><!-- state-based BG images --></a>
       <div class="SubMenu  MenuLevel1 clearfix" id="u242"><!-- vertical box -->
-       <ul class="SubMenuView colelem" id="u243"><!-- vertical box -->
-        <div class="_u243 f3s_top" id="_u243-f3s_top"></div>
-        <div class="_u243 f3s_mid clearfix" id="_u243-f3s_mid">
-         <div class="position_content" id="u243_position_content">
-          <div class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a>
-          </div>
-          <div class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a>
-          </div>
-          <div class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a>
-          </div>
-         </div>
-        </div>
-        <div class="_u243 f3s_bot" id="_u243-f3s_bot"></div>
+       <ul class="SubMenuView clearfix colelem" id="u243"><!-- vertical box -->
+        <li class="MenuItemContainer clearfix colelem" id="u332"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem" id="u333" href="the-shade.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u335-4"><!-- rasterized frame --><div id="u335-4_clip"><img id="u335-4_img" alt="The Shade" width="108" height="33" src="images/u335-4.png"/></div></div></a></li>
+        <li class="MenuItemContainer clearfix colelem" id="u344"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u345" href="the-corrupt.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u347-4"><!-- rasterized frame --><div id="u347-4_clip"><img id="u347-4_img" alt="The Corrupt" width="126" height="33" src="images/u347-4.png"/></div></div></a></li>
+        <li class="MenuItemContainer clearfix colelem" id="u351"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u354" href="the-forgotten.html"><!-- horizontal box --><div class="MenuItemLabel NoWrap grpelem" id="u356-4"><!-- rasterized frame --><div id="u356-4_clip"><img id="u356-4_img" alt="The Forgotten" width="144" height="33" src="images/u356-4.png"/></div></div></a></li>
        </ul>
       </div>
      </div>
@@ -89,17 +77,18 @@ var __adobewebfontsappname__ = "muse";
      </div>
     </nav>
    </div>
-   <div class="rgba-background clearfix colelem" id="u494"><!-- group -->
-    <div class="shadow clip_frame grpelem" id="u326"><!-- image -->
-     <img class="block" id="u326_img" src="images/the_shade.jpg" alt="" width="313" height="500"/>
+   <div class="rgba-background clearfix colelem" id="u494"><!-- column -->
+    <div class="shadow clip_frame colelem" id="u506"><!-- image -->
+     <img class="block" id="u506_img" src="images/ts%20fb%20cover.jpg" alt="" width="720" height="266"/>
     </div>
-    <div class="rgba-background clearfix grpelem" id="u495-4"><!-- content -->
-     <p id="u495-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
+    <div class="clearfix colelem" id="pu326"><!-- group -->
+     <div class="shadow clip_frame grpelem" id="u326"><!-- image -->
+      <img class="block" id="u326_img" src="images/the_shade.jpg" alt="" width="313" height="500"/>
+     </div>
+     <div class="rgba-background clearfix grpelem" id="u495-4"><!-- content -->
+      <p id="u495-2">James Langley's life is over. After an automobile accident leaves him comatose, James' body lies vulnerable in a hospital bed. However, his mind is lost, drifting between life and death, into The Shade. Trapped in a world shrouded by the unknown, he meets Virgil, a mysterious stranger that informs him that his car wreck was no accident; that the man responsible has imprisoned them both, intent on keeping them there. Together they must race against time to get James back to his body in the real world before he becomes the next victim of a malevolent psychopath. Enter the world of The Shade, where the boundaries of the human psyche are pushed to their limits and survival is not guaranteed. A place where death isn't the end, but only the beginning.</p>
+     </div>
     </div>
-   </div>
-   <div class="clearfix colelem" id="u438-5"><!-- content -->
-    <p>&nbsp;</p>
-    <p>Find the book on Amazon!</p>
    </div>
    <div class="verticalspacer"></div>
    <div class="colelem" id="u488"><!-- simple frame --></div>
